...
    }
    
    // Create a UIButton and set its image
    let imageButton = UIButton().apply {
        $0.setImage(UIImage(named: "close"), for: .normal)
        $0.tintColor = .white
        $0.accessibilityIdentifier = "closeButton"
    }

    @objc func rightButtonTapped() {
        dismiss(animated: true, completion: nil)
    }
    
...
